third_party/rust/pin-project/tests/ui/pin_project/overlapping_unpin_struct.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:17:5
   |
17 |     is_unpin::<Foo<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `_::__Foo<'_, PhantomPinned>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using `Box::pin`
note: required because it appears within the type `_::__Foo<'_, PhantomPinned>`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:5:8
   |
5  | struct Foo<T> {
   |        ^^^
note: required because of the requirements on the impl of `Unpin` for `Foo<PhantomPinned>`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:4:1
   |
4  | #[pin_project]
   | ^^^^^^^^^^^^^^
5  | struct Foo<T> {
   |        ^^^^^^
note: required by a bound in `is_unpin`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:14:16
   |
14 | fn is_unpin<T: Unpin>() {}
   |                ^^^^^ required by this bound in `is_unpin`
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
